# cpp-concurrency

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  plot_benchmarks.py  run_hashmap_benchmarks.sh
benchmark_results/: benchmark_hashmap.csv  lock_based_spsc.csv  removed_false_sharing.csv  results.csv  spsc.csv  with_memory_ordering.csv  with_relaxed_ordering.csv
benchmarks/: benchmark_hashmap.cpp  benchmark_spsc.cpp
include/cpp_concurrency/: hashmap_variants.h  spsc_variants.h
include/cpp_concurrency/hashmaps/: lock_based_hashmap.h  lock_based_hashmap_vector.h
include/cpp_concurrency/queues/spsc/: lock_based_spsc_queue.h  optimize_memory_ordering_spsc_queue.h  recursive_mutex_spsc_queue.h  remove_false_sharing.h  spsc_queue.h
include/lockfree/: lock_based_spsc_queue.h  optimize_memory_ordering_spsc_queue.h  recursive_mutex_spsc_queue.h  remove_false_sharing.h  spsc_queue.h  spsc_variants.h
include/lockfree/hashmaps/: lock_based_hashmap.h
include/lockfree/queues/spsc/: lock_based_spsc_queue.h  optimize_memory_ordering_spsc_queue.h  recursive_mutex_spsc_queue.h  remove_false_sharing.h  spsc_queue.h
tests/: test_lock_based_hashmap.cpp  test_spsc.cpp
